guide and inference wip

--- a/.pylintrc
+++ b/.pylintrc
@@ -449,7 +449,8 @@ disable=raw-checker-failed,
         unused-variable,
         unused-argument,
         line-too-long,
-        pointless-string-statement
+        pointless-string-statement,
+        trailing-whitespace
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
